tests/snapshots/test_runner__tests__compiler__typecheck__single_dispatch_6.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
let (x : Int) foo (y : Int) : Int = 123

let (x : Float) foo (y : Float) : Float = 789.0

entry
  9 foo 8 print;
  9.0 foo 8.0 print;
  1.0 foo 2 print // compile error

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/single_dispatch_6.kk:8:11
  │
8 │   1.0 foo 2 print // compile error
  │           ^ Type mismatch
  │
  = +---------------+-------------+
    | EXPECTED TYPE | ACTUAL TYPE |
    +---------------+-------------+
    | - Float       | + Int       |
    +---------------+-------------+
